# Sawyer-Pick-and-Place

./: README.md  intera.sh
devel/: .catkin
devel/lib/ece_555_sawyer_example/: run
devel/lib/ece_sawyer_project/: sawyer_pick_and_place
devel/lib/intera_examples/: constrained_zeroG.py  go_to_joint_angles.py  gripper_cuff_control.py  gripper_joystick.py  head_display_image.py  head_wobbler.py  joint_position_file_playback.py  joint_position_keyboard.py  joint_position_waypoints.py  joint_recorder.py  joint_torque_springs.py  navigator_io.py  send_random_trajectory.py  set_interaction_options.py
devel/lib/intera_interface/: calibrate_arm.py  joint_trajectory_action_server.py  send_urdf_fragment.py
devel/lib/pkgconfig/: ece_555_sawyer_example.pc  ece_sawyer_project.pc  intera_core_msgs.pc  intera_examples.pc  intera_interface.pc  intera_motion_msgs.pc  intera_tools_description.pc  sawyer_description.pc  sawyer_gazebo.pc  sawyer_hardware_interface.pc  sawyer_moveit_config.pc  sawyer_sim_controllers.pc  sawyer_sim_examples.pc  sns_ik_examples.pc  sns_ik_lib.pc
devel/lib/sns_ik_examples/: all_ik_tests
devel/share/ece_555_sawyer_example/cmake/: ece_555_sawyer_exampleConfig.cmake
devel/share/ece_sawyer_project/cmake/: ece_sawyer_projectConfig.cmake
devel/share/intera_core_msgs/cmake/: intera_core_msgs-msg-extras.cmake  (+2 more)
src/ece_sawyer_project/: CMakeLists.txt  README.md  package.xml
src/ece_sawyer_project/include/: planning.h
src/ece_sawyer_project/launch/: sawyer_world.launch
src/ece_sawyer_project/src/: planning.cpp  run.cpp
src/ece_sawyer_project/worlds/: sawyer_eb2036.world
(+23 files in other folders)
