<?xml version="1.0"?>
<package format="2">
  <name>ece_sawyer_project</name>
  <version>0.0.0</version>
  <description>The ece_555_sawyer_project package</description>

  <maintainer email="fjliving@ncsu.edu">Fred Livingston</maintainer>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
